# fea_benchmark

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  benchUtil.h  bench_util.h  conanfile.txt
cmake/: bench_utilConfig.cmake.in
compile_time_interface/: main.cpp  main_alex.cpp
const ref vs copy/: main.cpp
data_packing/: main.cpp
example/: main.cpp
examples/basic/: main.cpp
examples/compile_time_interface/: main.cpp  main_alex.cpp
examples/const_ref_vs_copy/: main.cpp
examples/data_packing/: main.cpp
examples/disabled/compile_time_interface/: main.cpp  main_alex.cpp
examples/disabled/fast_print/: main.cpp
examples/fast_print/: main.cpp
examples/function_costs/: main.cpp
examples/function_costs_recursive/: main.cpp
examples/strlen/: main.cpp
examples/vtable_test/: human_readable_assembly.asm  main.cpp
fast_print/: README.md  main.cpp
function costs/: main.cpp  main2.cpp
include/: bench_util.h
include/bench_util/: bench_util.h
tests/: main.cpp
vtable_test/: main.cpp
